# flutter_pdf_render

./: .editorconfig  .gitattributes  .gitignore  .metadata  CHANGELOG.md  CODE_OF_CONDUCT.md  README.md  publish.sh  pubspec.yaml
android/: .project  CMakeLists.txt  build.gradle
android/c++/: directBufferAndroid.cpp
android/gradle/wrapper/: gradle-wrapper.properties
android/src/main/: AndroidManifest.xml
example/: .gitignore  .metadata  README.md  analysis_options.yaml  pubspec.yaml
example/android/: build.gradle
example/android/app/: build.gradle
example/ios/Flutter/: .last_build_id
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
example/macos/Flutter/: GeneratedPluginRegistrant.swift
example/macos/Runner.xcodeproj/: project.pbxproj
example/test/: widget_test.dart
example/web/: index.html
example/windows/: CMakeLists.txt
example/windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
example/windows/runner/: Runner.rc  main.cpp
ios/: pdf_render.podspec
ios/Classes/: PdfRenderPlugin.h  PdfRenderPlugin.m  SwiftPdfRenderPlugin.swift  directBufferAndroid.cpp
lib/: pdf_render.dart  pdf_render_widgets.dart  pdf_render_widgets2.dart
lib/src/: pdf_render_method_channel.dart  pdf_render_web.dart
lib/src/interfaces/: interactive_viewer.dart  pdf_render.dart  pdf_render_platform_interface.dart
lib/src/sobar_pdf/: sobar.dart
lib/src/utils/: ffi_wrapper.dart  web_pointer.dart
lib/src/web/: pdf.js.dart  pdf_render_web_plugin.dart
lib/src/wrappers/: js_util.dart  pdf_texture.dart
macos/: flutter_pdf_render.podspec  pdf_render.podspec
macos/Classes/: AtomicReference.swift  FlutterPdfRenderPlugin.swift  SwiftPdfRenderPlugin.swift
pdf_render/: CHANGELOG.md  LICENSE  README.md  pubspec.yaml
pdf_render/android/: CMakeLists.txt  settings.gradle
pdf_render/example/: pubspec.yaml
pdf_render/example/lib/: main.dart
pdf_render/example/test/: widget_test.dart
pdf_render/example/web/: index.html
pdf_render/ios/: pdf_render.podspec
pdf_render/lib/: pdf_render.dart  pdf_render_method_channel.dart  pdf_render_widgets.dart  pdf_render_widgets2.dart  pdf_texture.dart  pdf_texture_native.dart
pdf_render_platform_interface/: CHANGELOG.md  README.md  pubspec.yaml
pdf_render_platform_interface/lib/: pdf_render.dart  pdf_render_method_channel.dart  pdf_render_platform_interface.dart
test/: pdf_render_test.dart
windows/: CMakeLists.txt  flutter_pdf_render_plugin.cpp  pdf_render_plugin.cpp
windows/include/flutter_pdf_render/: flutter_pdf_render_plugin.h
windows/include/pdf_render/: pdf_render_plugin.h
windows/sobar/include/: sobar.h
(+36 files in other folders)
